--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       src="https://kit.fontawesome.com/30c671eceb.js"
       crossorigin="anonymous"
     ></script>
-    <title>Portfolio App</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
